# cpp23-sdl3-2026

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  ReadMe.md
.sublime/: cpp-sdl.sublime-project
cmake/: dependencies.cmake  import-std.cmake
src/: CMakeLists.txt  main.cpp  pch.hpp  sdl-base.cppm  sdl-gpu.cppm  sdl-window.cppm  sdl.cppm
